TL;DR: A LOT of clean-ups but no functional change
- No Hard Tabs Ever!
- cargo clippy --fix
- cargo fmt
- match-bool conversions
- DOSims and match-bool fixes
- mmu.rs: Result usage is very messy, but too much to fix now
- cpu.rs: overly complicated code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ exclude = [
 [workspace]
 members = [".", "cli", "wasm"]
 
+[lints.clippy]
+match-bool = "deny"
+
 [badges]
 travis-ci = { repository = "takahirox/riscv-rust" }
 
