--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,8 @@ travis-ci = { repository = "tommythorn/riscv-rust" }
 fnv = "1.0.7"
 num-traits = "*"
 num-derive = "*"
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
