--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ travis-ci = { repository = "tommythorn/riscv-rust" }
 fnv = "1.0.7"
 num-traits = "*"
 num-derive = "*"
+wasm-timer = "0.2.5"
 
 [dev-dependencies.cargo-husky]
 version = "1"
