--- a/src/device/dts.dts
+++ b/src/device/dts.dts
@@ -29,7 +29,7 @@
         cpus {
                 #address-cells = <0x1>;
                 #size-cells = <0x0>;
-                timebase-frequency = <0x989680>;
+                timebase-frequency = <1000000>; // 1 MHz
 
                 cpu-map {
                         cluster0 {
