Renamed "Simmerv"; the original name was very generic
Naming is hard

riscv-tests have been included for a long time

Drop xv6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "riscv_emu_rust"
+name = "simmerv"
 version = "0.3.0"
 edition = "2024"
 description = "RISC-V emulator written in Rust"
 authors = ["Takahiro <hogehoge@gachapin.jp>", "Tommy Thorn <tommy-github2@thorn.ws>"]
 license = "MIT"
-homepage = "https://github.com/tommythorn/riscv-rust"
-repository = "https://github.com/tommythorn/riscv-rust"
+homepage = "https://github.com/tommythorn/simmerv"
+repository = "https://github.com/tommythorn/simmerv"
 exclude = [
   "resources/*",
   "screenshots/*",
@@ -25,7 +25,7 @@ expect_used = "warn"
 unreadable-literal = "allow"
 
 [badges]
-travis-ci = { repository = "tommythorn/riscv-rust" }
+travis-ci = { repository = "tommythorn/simmerv" }
 
 [dependencies]
 fnv = "1.0.7"
